Changelog
=========

0.4.2 (2012-11-26)
------------------

* update changelog, release [gyst]
* provide a virtualenv-enabled Travis buildout that can be debugged on a dev box [gyst]
* pep8 fixes [gyst]
* Updated Spanish l10n and Master manual template [macagua]
* Added locales and i18n extract script [macagua]
* Added more improvements about i18n support [macagua]
* Updated contributors file [macagua]
* Updated changelog [macagua]
* fix pyflakes by moving monkey into __init__ [gyst]
* ignore dist [gyst]
* pep8/pyflakes [hvelarde]
* update Travis CI configuration to include pep8/pyflakes testing [hvelarde]
* update location of extended configuration as the plonetest repo was moved to GitHub [hvelarde]
* update list of ignored objects [hvelarde]
* cleanup, bump version [gyst]
* add Travis CI configuration [hvelarde]
* fix rst formatting [gyst]

0.4.1 (2012-10-09)
------------------

* oops. merge. [gyst]
* ignore dist [gyst]
* small fixes [gyst]
* fix inline form submission handling [gyst]
* add profile navigation [gyst]

0.4 (2012-10-09)
----------------

Initial release.

* update docs [gyst]
* fix dependency [gyst]
* reindent for better pep8 [gyst]
* finish following/followers views [gyst]
* extract maxiprofile provider [gyst]
* base skel for following/followers view [gyst]
* provide clear [gyst]
* more styling [gyst]
* intercept /author and redirect to /@@profile [gyst]
* follow/unfollow buttons [gyst]
* s/followees/following/ [gyst]
* document weird uninstall behaviour [gyst]
* show plonesocial.activitystream, if installed [gyst]
* provide consistency with plonesocial.activitystream [gyst]
* GS name [gyst]
* base profile [gyst]
* a monkey that works, thx enfold [gyst]
* monkeypatch image sizes -- doesnt work :-( [gyst]
* fix setup.py [gyst]
* base skel for traversable profile view [gyst]
* doc [gyst]
* core follow/unfollow social graph API [gyst]
* provide noop tool install [gyst]
* remove src indirection [gyst]
* initial checkin from zopeskel [gyst]