@@ -1,16 +1,16 @@
 <div class="plonesocial profile maxiprofile"
      tal:condition="view/data">
-    
+
   <div class="portrait">
     <a tal:attributes="href view/profile_url"
        tal:content="structure view/portrait" />
   </div>
-  
+
   <div class="personal-info" i18n:domain="plonesocial.network">
-    
+
     <h1 class="username">
       <a tal:attributes="href view/profile_url"
-	 tal:content="view/data/fullname">user name</a>
+         tal:content="view/data/fullname">user name</a>
     </h1>
 
     <div class="navigation">
@@ -24,7 +24,7 @@
         <li>
           <a tal:attributes="href view/followers_url">
             <span class="count"
-                  tal:content="view/followers_count">21</span>            
+                  tal:content="view/followers_count">21</span>
             <span class="option" i18n:translate="">Followers</span>
           </a>
         </li>
@@ -35,46 +35,45 @@
             <span class="option" i18n:translate="">Following</span>
           </a>
         </li>
-      </ul>      
+      </ul>
     </div>
 
     <div class="userid">
       <a tal:attributes="href view/profile_url"
-	 tal:content="string: @${view/userid}">@who</a>
+         tal:content="string: @${view/userid}">@who</a>
     </div>
 
     <div class="bio"
-	 tal:content="view/data/description">bio</div>
+         tal:content="view/data/description">bio
+    </div>
+
     <div>
       <span class="location"
-	    tal:condition="view/data/location"
-	    tal:content="view/data/location">location</span>
+            tal:condition="view/data/location"
+            tal:content="view/data/location">location</span>
       <a class="home_page"
-	 tal:condition="view/data/home_page"
-	 tal:attributes="href view/data/home_page"
-	 tal:content="view/data/home_page">url</a>
+            tal:condition="view/data/home_page"
+            tal:attributes="href view/data/home_page"
+            tal:content="view/data/home_page">url</a>
     </div>
 
     <div class="subunsub" tal:condition="view/show_subunsub">
       <form method="post">
         <input type="hidden" name="userid"
                tal:attributes="value view/userid" />
-	<!-- TODO check this string, by extract it for add i18n support -->
-	<input tal:condition="not:view/is_following" 
-	       type="submit" name="subunsub" 
-	       value="follow" />
-	<span tal:condition="view/is_following"
-	      class="following" i18n:translate="">
-	  Following
-	</span>
-	<!-- TODO check this string, by extract it for add i18n support -->
-	<input tal:condition="view/is_following" 
-	       type="submit" name="subunsub" 
-	       value="unfollow" />
+        <input tal:condition="not:view/is_following"
+               type="submit" name="subunsub_follow"
+               i18n:attributes="value"
+               value="follow" />
+        <span tal:condition="view/is_following"
+              class="following" i18n:translate="">
+          Following
+        </span>
+        <input tal:condition="view/is_following"
+               type="submit" name="subunsub_unfollow"
+               i18n:attributes="value"
+               value="unfollow" />
       </form>
     </div>
-
-    
   </div><!-- /info -->
-  
 </div><!-- /profile -->
